<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helloworld</name>
  <version>0.0.0</version>
  <description>RMW helloworld example</description>
  <maintainer email="jaemin@gurum.cc">jaemin</maintainer>
  <license>TODO: describe license information</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>helloworld_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>

  <exec_depend>helloworld_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
